# eisberg

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: package-test.yml
eisberg/: core.py
tests/: sample.py  test_core.py
